[package]
name = "rust_github_app"
version = "0.1.0"
authors = ["Pablo Sanchez <pablo.gon.sanchez@hpe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

# [dependencies.github-rs]
# version = "0.7"
# default-features = false
# features = ["rust-native-tls"]