[package]
name = "rust_github_app"
version = "0.1.0"
authors = ["Pablo Sanchez <pablo.gon.sanchez@hpe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.14"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0"
#serde_derive = "1.0"
tera = "0.11"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"

# [dependencies.github-rs]
# version = "0.7"
# default-features = false
# features = ["rust-native-tls"]